
Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

20-Jan-2011 Jean-Marie Simonet
 # [#24491] com_contact, wrong string is used in config.xml (COM_CONTACT_FIELD_PROFILE_SHOW_LABEL used twice). Thanks Edgars.
 # Changing version number in en-GB.xml and en-US.xml installation
 # Adding missing new tag in localise.xml [#23083]

19-Jan-2011 Jean-Marie Simonet
 #$ [#24464] Incorrect language definition in 'List Contacts in a Category' menu item type. Thanks Jozsef and Bill.
 # [#24397] group perms list should be expand/collapsible at will. Thanks Jeremy and Andrea.
 #$ [#24475] Multiple groups are a problem in the user manager. Thanks Andrea.
 $ [#24097] Adding new strings from that non-committed yet patch in installation ini files to freeze them for 1.6.1. 
  
18-Jan-2011 Jean-Marie Simonet
 # Correcting code typo
 # [#24327] Bluestork administrator template template.css typo. Thanks Bill.
 # [#24428] breadcrumbs doesn't look good on rtl templates
 # [#24461] Langswitcher module needed display improvement parameters
 $ [#24466] Incomplete language strings in Mass Mail. Thanks Mark.
 # [#24460] uppear right toolbar on rtl template isn't align well. Thanks Ofer.
 $ [#24448] missing translation for COM_WEBLINKS_DEFAULT_PAGE_TITLE. Thanks Bill.

17-Jan-2011 Jean-Marie Simonet
 + Adding he.gif flag to langswitcher
 # [#24426] Missing language string JLIB_INSTALLER_ABORT_PACK_INSTALLER_COPY_SETUP. Thanks Bill.
 # [#24409] RTL/LTR issues in Beez2 and 5 (News feeds and debug)
 
16-Jan-2011 Jean-Marie Simonet
 # [#24391] Implementing RTL pagination in beez
 # [#23083] Internationalisation of sample data options list. Thanks Christophe.

15-Jan-2011 Jean-Marie Simonet
 $ Correcting lang string typo
 #$ [#24384] Missing Language string Cache Unwritable
 # [#24396] MODULES_ERR_XML incorrectly called. Thanks Michael
 
14-Jan-2011 Jean-Marie Simonet
 $ Correcting lang string typo