@@ -683,6 +683,24 @@ div.current fieldset.radio label {
 	margin: 3px 0 0 5px;
 }
 
+div.current fieldset.checkboxes {
+	float: left;
+	clear: right;
+}
+
+div.current fieldset.checkboxes input {
+	clear: left;
+	min-width: 15px;
+	float: left;
+	margin: 3px 0 0 2px;
+}
+
+div.current fieldset.checkboxes label {
+	clear: right;
+	min-width: 45px;
+	margin: 3px 0 0 5px;
+}
+
 div.current input,
 div.current textarea,
 div.current select {
